--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChefVirtual</title>
+    <!-- Link com a folha de estilo -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>ChefVirtual</h1>
