--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Iportante para SEO-->
     <title>ChefVirtual</title>
     <!-- Link com a folha de estilo -->
     <link rel="stylesheet" href="style.css">
+    <!-- Iportante para SEO-->
+    <meta name="descripition" content="Um site dedicadp ao ensino de receitas gourmet como você nunca viu.">
 </head>
 <body>
     <h1>ChefVirtual</h1>
