--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="style.css">
     <!-- Iportante para SEO-->
     <meta name="descripition" content="Um site dedicadp ao ensino de receitas gourmet como você nunca viu.">
+    <link rel="icon" href="img/logo.png">
 </head>
 <body>
     <h1>ChefVirtual</h1>
-    <img src="./img/site em construção-min.jpg" alt="Em construção">
+    <img src="./img/siteemconstrução(1).jpg" alt="Em construção">
 </body>
 </html>
