--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1>ChefVirtual</h1>
-    <img src="./img/siteemconstrução(1).jpg" alt="Em construção">
+    <img src="./img/siteemconstrução.jpg" alt="Em construção">
 </body>
 </html>
