--- a/index.html
+++ b/index.html
@@ -12,7 +12,55 @@
     <link rel="icon" href="img/logo.png">
 </head>
 <body>
-    <h1>ChefVirtual</h1>
-    <img src="./img/siteemconstrução.jpg" alt="Em construção">
+    <!-- Cabeçalho -->
+    <header>
+        <div class="Container Flex">
+            <div id="logo">
+                <img src="./img/logo.png" alt="">
+            </div>
+            <nav>
+                <input type="checkbox" 
+                id="check">
+                <label for="check">&#x2630;
+                </label>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="receitas.html">Menu Gourmet</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Em Construção -->
+    <section id="manutencao">
+        <h2>Em construção</h2>
+        <img src="./img/siteemconstrução(2).jpg" alt="Em construção">
+    </section>
+
+    <!-- Rodapé -->
+    <footer>
+       <div class="Container Flex">
+            <div id="social">
+                <a href="http://www.instagram.com/" target="_blank">
+                <img src="./img/insta.png" alt="instagram"></a>
+                <a href="http://twitter.com/" target="_blank">
+                <img src="./img/twitter.png" alt="twitter"></a>
+                <a href="http://www.linkedin.com/" target="_blank"> 
+                <img src="./img/linkedin.png" alt="linkedin"></a>
+                <a href="http://www.facebook.com/" target="_blank">
+                <img src="./img/facebook.png" alt="facebook"></a>
+            </div>
+            <div id="copyright">
+             <p>© 2024 - ChefVirtual</p> 
+            </div>
+       </div>
+    </footer>
+
+    <!-- Topo -->
+    <a href="#logo" id="topo"><img src="./img/Seta-para-cima.png" alt="seta topo"></a>
+
 </body>
+
 </html>
