Fazendo mudança na parte EM CONTRUÇÃO

--- a/index.html
+++ b/index.html
@@ -33,10 +33,19 @@
         </div>
     </header>
 
+    <h1>ChefVirtual</h1>
     <!-- Em Construção -->
     <section id="manutencao">
-        <h2>Em construção</h2>
-        <img src="./img/siteemconstrução(2).jpg" alt="Em construção">
+        <h2>Conteudo</h2>
+        <div class="Card">
+            <img src="./img/criacao-de-site.png" 
+            alt="Em construção">
+            <h3> Em construção</h3>
+            <p>Site em construção. Você pode acompanhar as 
+            nividade pelo instagram</p>
+            <a href="http://www.instagram.com/"
+            target="_blank">Saiba + </a>
+        </div>
     </section>
 
     <!-- Rodapé -->
