--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="manutencao">
         <h2>Conteudo</h2>
         <div class="Card">
-            <img src="./img/criacao-de-site.png" 
+            <img src="./img/site.jpg" 
             alt="Em construção">
             <h3> Em construção</h3>
             <p>Site em construção. Você pode acompanhar as 
