--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- Iportante para SEO-->
     <title>ChefVirtual</title>
+
     <!-- Link com a folha de estilo -->
     <link rel="stylesheet" href="style.css">
+
     <!-- Iportante para SEO-->
     <meta name="descripition" content="Um site dedicadp ao ensino de receitas gourmet como você nunca viu.">
     <link rel="icon" href="img/logo.png">
 </head>
 <body>
+
+
     <!-- Cabeçalho -->
     <header>
         <div class="Container Flex">
@@ -33,20 +38,21 @@
         </div>
     </header>
 
-    <h1>ChefVirtual</h1>
+    
     <!-- Em Construção -->
-    <section id="manutencao">
-        <h2>Conteudo</h2>
+    <section class="Container">
+        <h2>Em construção</h2>
         <div class="Card">
             <img src="./img/site.jpg" 
             alt="Em construção">
-            <h3> Em construção</h3>
+            <h3> Update</h3>
             <p>Site em construção. Você pode acompanhar as 
             nividade pelo instagram</p>
             <a href="http://www.instagram.com/"
             target="_blank">Saiba + </a>
         </div>
     </section>
+
 
     <!-- Rodapé -->
     <footer>
@@ -67,6 +73,7 @@
        </div>
     </footer>
 
+    
     <!-- Topo -->
     <a href="#logo" id="topo"><img src="./img/Seta-para-cima.png" alt="seta topo"></a>
 
