--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="receitas.html">Menu Gourmet</a></li>
+                    <li><a href="menu-gourmet.html">Menu Gourmet</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
@@ -73,7 +73,7 @@
        </div>
     </footer>
 
-    
+
     <!-- Topo -->
     <a href="#logo" id="topo"><img src="./img/Seta-para-cima.png" alt="seta topo"></a>
 
