--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Iportante para SEO-->
@@ -14,6 +15,7 @@
     <meta name="descripition" content="Um site dedicadp ao ensino de receitas gourmet como você nunca viu.">
     <link rel="icon" href="img/logo.png">
 </head>
+
 <body>
 
 
@@ -24,8 +26,7 @@
                 <img src="./img/logo.png" alt="">
             </div>
             <nav>
-                <input type="checkbox" 
-                id="check">
+                <input type="checkbox" id="check">
                 <label for="check">&#x2630;
                 </label>
                 <ul>
@@ -38,39 +39,37 @@
         </div>
     </header>
 
-    
+
     <!-- Em Construção -->
     <section class="Container">
         <h2>Em construção</h2>
         <div class="Card">
-            <img src="./img/site.jpg" 
-            alt="Em construção">
+            <img src="./img/site.jpg" alt="Em construção">
             <h3> Update</h3>
-            <p>Site em construção. Você pode acompanhar as 
-            nividade pelo instagram</p>
-            <a href="http://www.instagram.com/"
-            target="_blank">Saiba + </a>
+            <p>Site em construção. Você pode acompanhar as
+                novidades pelo instagram</p>
+            <a href="http://www.instagram.com/" target="_blank">Saiba + </a>
         </div>
     </section>
 
 
     <!-- Rodapé -->
     <footer>
-       <div class="Container Flex">
+        <div class="Container Flex">
             <div id="social">
                 <a href="http://www.instagram.com/" target="_blank">
-                <img src="./img/insta.png" alt="instagram"></a>
+                    <img src="./img/insta.png" alt="instagram"></a>
                 <a href="http://twitter.com/" target="_blank">
-                <img src="./img/twitter.png" alt="twitter"></a>
-                <a href="http://www.linkedin.com/" target="_blank"> 
-                <img src="./img/linkedin.png" alt="linkedin"></a>
+                    <img src="./img/twitter.png" alt="twitter"></a>
+                <a href="http://www.linkedin.com/" target="_blank">
+                    <img src="./img/linkedin.png" alt="linkedin"></a>
                 <a href="http://www.facebook.com/" target="_blank">
-                <img src="./img/facebook.png" alt="facebook"></a>
+                    <img src="./img/facebook.png" alt="facebook"></a>
             </div>
             <div id="copyright">
-             <p>© 2024 - ChefVirtual</p> 
+                <p>© 2024 - ChefVirtual</p>
             </div>
-       </div>
+        </div>
     </footer>
 
 
