--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img src="./img/site.jpg" alt="Em construção">
             <h3> Update</h3>
             <p>Site em construção. Você pode acompanhar as
-                novidades pelo instagram</p>
+                novidades pelo instagram.</p>
             <a href="http://www.instagram.com/" target="_blank">Saiba + </a>
         </div>
     </section>
