--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Cabeçalho -->
     <header>
-        <div class="Container Flex">
+        <div class="FlexMenu">
             <div id="logo">
                 <img src="./img/logo.png" alt="">
             </div>
