--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Iportante para SEO-->
-    <meta name="descripition" content="Um site dedicadp ao ensino de receitas gourmet como você nunca viu.">
+    <meta name="descripition" content="Um site dedicado ao ensino de receitas gourmet como você nunca viu.">
     <link rel="icon" href="img/logo.png">
 </head>
 
