--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
 
     <!-- Em Construção -->
     <section class="Container">
-        <h2>Em construção</h2>
+        
         <div class="Card">
             <img src="./img/site.jpg" alt="Em construção">
-            <h3> Update</h3>
-            <p>Site em construção. Você pode acompanhar as
-                novidades pelo instagram.</p>
-            <a href="http://www.instagram.com/" target="_blank">Saiba + </a>
+            <h3> Em Construção </h3>
+            <p>Este site está em construção.
+             Você pode acompanhar as novidades 
+             pelo nosso instagram.</p>
+            <a href="http://www.instagram.com/" target="_blank" class="Button">Saiba + </a>
         </div>
     </section>
 
