--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Cabeçalho -->
     <header>
-        <div class="FlexMenu">
+        <div class="ContainerEx FlexMenu">
             <div id="logo">
                 <img src="./img/logo.png" alt="">
             </div>
@@ -33,12 +33,10 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="menu-gourmet.html">Menu Gourmet</a></li>
-                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-
 
     <!-- Em Construção -->
      <section class="Container">
