--- a/menu-gourmet.html
+++ b/menu-gourmet.html
@@ -33,6 +33,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="menu-gourmet.html">Menu Gourmet</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,6 +45,8 @@
             <h1>Menu Gourmet</h1>
         </div>
     </main>
+    <!-- Links Para os Conteudos-->
+    <section class="Container"></section>
 
     <!-- Em Construção -->
      <section class="Container">
