--- a/index.html
+++ b/index.html
@@ -33,10 +33,18 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="menu-gourmet.html">Menu Gourmet</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+
+    <!-- Destaque Sobre -->
+    <main class="Banner2">
+        <div class="Container">
+            <h1>HOME</h1>
+        </div>
+    </main>
 
     <!-- Em Construção -->
      <section class="Container">
