--- a/sobre.html
+++ b/sobre.html
@@ -30,6 +30,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="menu-gourmet.html">Menu Gourmet</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
