--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Destaque Sobre -->
     <main class="Banner2">
         <div class="Container">
-            <h1>HOME</h1>
+            <h1>Home</h1>
         </div>
     </main>
 
