--- a/sobre.html
+++ b/sobre.html
@@ -39,7 +39,7 @@
     <!-- Destaque Sobre -->
     <main class="Banner2">
         <div class="Container">
-            <h1>SOBRE</h1>
+            <h1>Sobre</h1>
         </div>
     </main>
 
