--- a/menu-gourmet/receitas-doces.html
+++ b/menu-gourmet/receitas-doces.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Iportante para SEO-->
-    <title>Venha Descobrir...</title>
+    <title>ChefVirtual</title>
 
     <!-- Link com a folha de estilo -->
     <link rel="stylesheet" href="style.css">
@@ -42,16 +42,9 @@
     <!-- Destaque Sobre -->
     <main class="Banner2">
         <div class="Container">
-            <h1>Menu Gourmet</h1>
+            <h1>Receitas Doces</h1>
         </div>
     </main>
-    <!-- Links Para os Conteudos-->
-    <section class="Container">
-        <ul>
-            <li><a href="receitas-salgadas.html"></a>Receitas Salgadas</li>
-            <li><a href="receitas-doces.html"></a>Receitas Doces</li>
-        </ul>
-    </section>
 
     <!-- Em Construção -->
      <section class="Container">
