--- a/menu-gourmet.html
+++ b/menu-gourmet.html
@@ -47,23 +47,25 @@
     </main>
     <!-- Links Para os Conteudos-->
     <section class="Container">
-        <ul>
-            <li><a href="receitas-salgadas.html"></a>Receitas Salgadas</li>
-            <li><a href="receitas-doces.html"></a>Receitas Doces</li>
-        </ul>
+        
+            <ul>
+                <li><a href="./menu-gourmet/receitas-doces.html">Receitas Doces</a></li>
+                <li><a href="./menu-gourmet/receitas-salgadas.html">Receitas Salgadas</a></li>
+            </ul>
+       
     </section>
 
     <!-- Em Construção -->
-     <section class="Container">
+    <section class="Container">
         <div class="Card">
             <img src="./img/site.jpg" alt="Em construção">
             <h3> Em Construção </h3>
             <p>Este site está em construção.
-             Você pode acompanhar as novidades 
-             pelo nosso instagram.</p>
+                Você pode acompanhar as novidades
+                pelo nosso instagram.</p>
             <a href="http://www.instagram.com/" target="_blank" class="Button">Saiba + </a>
         </div>
-    </section> 
+    </section>
 
 
     <!-- Rodapé -->
