--- a/menu-gourmet/receitas-doces.html
+++ b/menu-gourmet/receitas-doces.html
@@ -9,11 +9,11 @@
     <title>ChefVirtual</title>
 
     <!-- Link com a folha de estilo -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 
     <!-- Iportante para SEO-->
     <meta name="descripition" content="Um site dedicado ao ensino de receitas gourmet como você nunca viu.">
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="../img/logo.png">
 </head>
 
 <body>
@@ -23,17 +23,17 @@
     <header>
         <div class="ContainerEx FlexMenu">
             <div id="logo">
-                <img src="./img/logo.png" alt="">
+                <img src="../img/logo.png" alt="">
             </div>
             <nav>
                 <input type="checkbox" id="check">
                 <label for="check">&#x2630;
                 </label>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="menu-gourmet.html">Menu Gourmet</a></li>
-                    <li><a href="contato.html">Contato</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../sobre.html">Sobre</a></li>
+                    <li><a href="../menu-gourmet.html">Menu Gourmet</a></li>
+                    <li><a href="../contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -49,7 +49,7 @@
     <!-- Em Construção -->
      <section class="Container">
         <div class="Card">
-            <img src="./img/site.jpg" alt="Em construção">
+            <img src="../img/site.jpg" alt="Em construção">
             <h3> Em Construção </h3>
             <p>Este site está em construção.
              Você pode acompanhar as novidades 
@@ -64,13 +64,13 @@
         <div class="Container Flex">
             <div id="social">
                 <a href="http://www.instagram.com/" target="_blank">
-                    <img src="./img/insta.png" alt="instagram"></a>
+                    <img src="../img/insta.png" alt="instagram"></a>
                 <a href="http://twitter.com/" target="_blank">
-                    <img src="./img/twitter.png" alt="twitter"></a>
+                    <img src="../img/twitter.png" alt="twitter"></a>
                 <a href="http://www.linkedin.com/" target="_blank">
-                    <img src="./img/linkedin.png" alt="linkedin"></a>
+                    <img src="../img/linkedin.png" alt="linkedin"></a>
                 <a href="http://www.facebook.com/" target="_blank">
-                    <img src="./img/facebook.png" alt="facebook"></a>
+                    <img src="../img/facebook.png" alt="facebook"></a>
             </div>
             <div id="copyright">
                 <p>© 2024 - ChefVirtual</p>
@@ -80,7 +80,7 @@
 
 
     <!-- Topo -->
-    <a href="#logo" id="topo"><img src="./img/Seta-para-cima.png" alt="seta topo"></a>
+    <a href="#logo" id="topo"><img src="../img/Seta-para-cima.png" alt="seta topo"></a>
 
 </body>
 
