--- a/sobre.html
+++ b/sobre.html
@@ -44,7 +44,17 @@
     </main>
 
     <!-- Conteúdo Sobre -->
-    <section id="miqueias">
+    <section class="Container">
+        <div class="Card">
+            <img src="./img/site.jpg" alt="Em construção">
+            <h3> Em Construção </h3>
+            <p>Este site está em construção.
+             Você pode acompanhar as novidades 
+             pelo nosso instagram.</p>
+            <a href="http://www.instagram.com/" target="_blank" class="Button">Saiba + </a>
+        </div>
+    </section> 
+   <!-- <section id="miqueias">
         <div class="Container FlexSobre">
             <div id="imgSobre">
                 
@@ -61,7 +71,7 @@
                 <p><span id="autor">(Robert Collier)</span></p>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- Rodapé -->
     <footer>
