--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
         </div>
     </header>
 
-    <!-- Destaque Sobre -->
-    <main class="Banner2">
-        <div class="Container">
-            <h1>Home</h1>
-        </div>
-    </main>
+    <!-- Destaque -->
+  <main id="banner">
+    <div class="ContainerEx">
+      <h1>Diga Olá</h1>
+      <h2>para sua próxima experiência gastronômica</h2>
+      <a href="menu-gourmet.html" class="Botao">Menu Gourmet</a>
+    </div>
+  </main>
 
     <!-- Em Construção -->
      <section class="Container">
