--- a/sobre.html
+++ b/sobre.html
@@ -43,7 +43,7 @@
         </div>
     </main>
 
-    <!-- Conteúdo Sobre -->
+    <!-- Em Construção -->
     <section class="Container">
         <div class="Card">
             <img src="./img/site.jpg" alt="Em construção">
@@ -54,6 +54,8 @@
             <a href="http://www.instagram.com/" target="_blank" class="Button">Saiba + </a>
         </div>
     </section> 
+
+    <!-- Conteúdo Sobre -->
    <!-- <section id="miqueias">
         <div class="Container FlexSobre">
             <div id="imgSobre">
