--- a/sobre.html
+++ b/sobre.html
@@ -20,7 +20,7 @@
     <header>
         <div class="ContainerEx FlexMenu">
             <div id="logo">
-                <img src="./img/logo.png" alt="">
+                <a href="./index.html"><img src="./img/logo.png" alt="Logo"></a>
             </div>
             <nav>
                 <input type="checkbox" id="check">
