mudando o banner e fazendo o botão

--- a/contato.html
+++ b/contato.html
@@ -40,9 +40,10 @@
     </header>
 
     <!-- Destaque Sobre -->
-    <main class="Banner2">
+    <main id="banner2">
         <div class="Container">
             <h1>Contato</h1>
+            <h2>Fale conosco</h2>
         </div>
     </main>
 
