--- a/menu-gourmet.html
+++ b/menu-gourmet.html
@@ -40,19 +40,18 @@
     </header>
 
     <!-- Destaque Sobre -->
-    <main class="Banner2">
+    <main id="banner3">
         <div class="Container">
             <h1>Menu Gourmet</h1>
+            <h2>Venha se deliciar</h2>
         </div>
     </main>
     <!-- Links Para os Conteudos-->
     <section class="Container">
-        
-            <ul>
-                <li><a href="./menu-gourmet/receitas-doces.html">Receitas Doces</a></li>
-                <li><a href="./menu-gourmet/receitas-salgadas.html">Receitas Salgadas</a></li>
-            </ul>
-       
+        <ul id="link">
+            <li><a href="./menu-gourmet/receitas-doces.html">Receitas Doces</a></li>
+            <li><a href="./menu-gourmet/receitas-salgadas.html">Receitas Salgadas</a></li>
+        </ul>
     </section>
 
     <!-- Em Construção -->
