--- a/menu-gourmet/receitas-doces.html
+++ b/menu-gourmet/receitas-doces.html
@@ -40,9 +40,10 @@
     </header>
 
     <!-- Destaque Sobre -->
-    <main class="Banner2">
+    <main id="banner3">
         <div class="Container">
             <h1>Receitas Doces</h1>
+            <h2>Explore nossas delícias gourmet doces!</h2>
         </div>
     </main>
 
