--- a/sobre.html
+++ b/sobre.html
@@ -37,9 +37,10 @@
     </header>
 
     <!-- Destaque Sobre -->
-    <main class="Banner2">
+    <main id="banner1">
         <div class="Container">
             <h1>Sobre</h1>
+            <h2>Venha nos conhecer</h2>
         </div>
     </main>
 
