--- a/menu-gourmet/receitas-salgadas.html
+++ b/menu-gourmet/receitas-salgadas.html
@@ -40,9 +40,10 @@
     </header>
 
     <!-- Destaque Sobre -->
-    <main class="Banner2">
+    <main id="banner3">
         <div class="Container">
             <h1>Receitas Salgadas</h1>
+            <h2>Descubra sabores gourmet salgados aqui!</h2>
         </div>
     </main>
 
