--- a/index.html
+++ b/index.html
@@ -40,25 +40,88 @@
     </header>
 
     <!-- Destaque -->
-  <main id="banner">
-    <div class="ContainerEx">
-      <h1>Diga Olá</h1>
-      <h2>para sua próxima experiência gastronômica</h2>
-      <a href="menu-gourmet.html" class="Botao">Menu Gourmet</a>
-    </div>
-  </main>
+    <main id="banner">
+        <div class="ContainerEx">
+            <h1>Diga Olá</h1>
+            <h2>para sua próxima experiência gastronômica</h2>
+            <a href="menu-gourmet.html" class="Botao">Menu Gourmet</a>
+        </div>
+    </main>
 
     <!-- Em Construção -->
-     <section class="Container">
-        <div class="Card">
-            <img src="./img/site.jpg" alt="Em construção">
-            <h3> Em Construção </h3>
-            <p>Este site está em construção.
-             Você pode acompanhar as novidades 
-             pelo nosso instagram.</p>
-            <a href="http://www.instagram.com/" target="_blank" class="Button">Saiba + </a>
+    <section class="Container">
+        <div class="Texto1">
+            <h4> SOBRE A GENTE </h4>
+            <p>
+            <h1>Você já conhece o ChefVirtual?</h1>
+            </p>
+            <a href="menu-gourmet.html" class="Button2"> Conheça nossas receitas</a>
         </div>
-    </section> 
+    </section>
+
+    <section class="Container">
+        <div class="Card2">
+            <img src="./img/receita1.png" alt="Em construção">
+            <h3> Em Construção </h3>
+            <p>O site oferece uma ampla variedade de receitas gourmet, 
+                desde pratos clássicos refinados até criações
+                inovadoras. Os visitantes são convidados a explorar 
+                e descobrir novos sabores e técnicas culinárias,
+                transformando suas refeições em experiências 
+                memoráveis, como esta incrível Salada de Arroz 
+                com Camarão.</p>
+        </div>
+    </section>
+
+    <section class="Container">
+        <div class="carousel-container">
+            <div class="carousel">
+                <div class="Card">
+                    <img src="./img/imagem1.png" alt="Receita 1">
+                    <div class="card-content">
+                        <h3> SOBREMESA </h3>
+                        <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem
+                            Lactose, Vegano, Vegetariano</p>
+                        <p>
+                        <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
+                        </p>
+                        <p>Uma mousse de maracujá deliciosa, saudável e
+                            prática, sem leite condensado, creme de leite e
+                            ovos.
+                        </p>
+
+                        <div id="relogio">
+                            <img src="img/relogio1.png" alt="clock">
+                            <p>00:25 + tempo para demolhar as
+                                castanhas e gelar o maracujá</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="Card">
+                    <img src="./img/imagem1.png" alt="Receita 1">
+                    <div class="card-content">
+                        <h3> SOBREMESA </h3>
+                        <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem
+                            Lactose, Vegano, Vegetariano</p>
+                        <p>
+                        <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
+                        </p>
+                        <p>Uma mousse de maracujá deliciosa, saudável e
+                            prática, sem leite condensado, creme de leite e
+                            ovos.
+                        </p>
+
+                        <div id="relogio">
+                            <img src="img/relogio1.png" alt="clock">
+                            <p>00:25 + tempo para demolhar as
+                                castanhas e gelar o maracujá</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <!-- Rodapé -->
@@ -82,7 +145,7 @@
 
 
     <!-- Topo -->
-    <a href="#logo" id="topo"><img src="./img/Seta-para-cima.png" alt="seta topo"></a>
+    <a href="#logo" id="topo"><img src="./img/topo1.png" alt="seta topo"></a>
 
 </body>
 
