--- a/sobre.html
+++ b/sobre.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Iportante para SEO-->
-    <title>Olá! Venha me conhecer</title>
+    <title>Olá! Venha Nos Conhecer</title>
 
     <!-- Link com a folha de estilo -->
     <link rel="stylesheet" href="style.css">
