--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
         <div class="ContainerEx">
             <h1>Diga Olá</h1>
             <h2>para sua próxima experiência gastronômica</h2>
-            <a href="menu-gourmet.html" class="Botao">Menu Gourmet</a>
         </div>
     </main>
 
@@ -52,9 +51,7 @@
     <section class="Container">
         <div class="Texto1">
             <h4> SOBRE A GENTE </h4>
-            <p>
-            <h1>Você já conhece o ChefVirtual?</h1>
-            </p>
+            <h2>Você já conhece o ChefVirtual?</h2>
             <a href="menu-gourmet.html" class="Button2"> Conheça nossas receitas</a>
         </div>
     </section>
@@ -63,12 +60,12 @@
         <div class="Card2">
             <img src="./img/receita1.png" alt="Em construção">
             <h3> Em Construção </h3>
-            <p>O site oferece uma ampla variedade de receitas gourmet, 
+            <p>O site oferece uma ampla variedade de receitas gourmet,
                 desde pratos clássicos refinados até criações
-                inovadoras. Os visitantes são convidados a explorar 
+                inovadoras. Os visitantes são convidados a explorar
                 e descobrir novos sabores e técnicas culinárias,
-                transformando suas refeições em experiências 
-                memoráveis, como esta incrível Salada de Arroz 
+                transformando suas refeições em experiências
+                memoráveis, como esta incrível Salada de Arroz
                 com Camarão.</p>
         </div>
     </section>
@@ -80,17 +77,11 @@
                     <img src="./img/imagem1.png" alt="Receita 1">
                     <div class="card-content">
                         <h3> SOBREMESA </h3>
-                        <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem
-                            Lactose, Vegano, Vegetariano</p>
-                        <p>
+                        <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano, Vegetariano</p>
                         <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
-                        </p>
-                        <p>Uma mousse de maracujá deliciosa, saudável e
-                            prática, sem leite condensado, creme de leite e
-                            ovos.
-                        </p>
-
-                        <div id="relogio">
+                        <p>Uma mousse de maracujá deliciosa, saudável e prática, sem leite condensado, creme de leite e
+                            ovos.</p>
+                        <div class="relogio">
                             <img src="img/relogio1.png" alt="clock">
                             <p>00:25 + tempo para demolhar as
                                 castanhas e gelar o maracujá</p>
@@ -101,20 +92,14 @@
                     <img src="./img/imagem1.png" alt="Receita 1">
                     <div class="card-content">
                         <h3> SOBREMESA </h3>
-                        <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem
-                            Lactose, Vegano, Vegetariano</p>
-                        <p>
+                        <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano, Vegetariano</p>
                         <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
-                        </p>
-                        <p>Uma mousse de maracujá deliciosa, saudável e
-                            prática, sem leite condensado, creme de leite e
-                            ovos.
-                        </p>
-
-                        <div id="relogio">
-                            <img src="img/relogio1.png" alt="clock">
-                            <p>00:25 + tempo para demolhar as
-                                castanhas e gelar o maracujá</p>
+                        <p>Uma mousse de maracujá deliciosa, saudável e prática, sem leite condensado, creme de leite e
+                            ovos. </p>
+                        <div class="relogio">
+                        <img src="img/relogio1.png" alt="clock">
+                        <p>00:25 + tempo para demolhar as
+                            castanhas e gelar o maracujá</p>
                         </div>
                     </div>
                 </div>
