--- a/menu-gourmet.html
+++ b/menu-gourmet.html
@@ -48,6 +48,9 @@
     </main>
     <!-- Links Para os Conteudos-->
     <section class="Container">
+        <div id="h3">
+        <h3>Receitas</h3>
+        </div>
         <ul id="link">
             <li><a href="./menu-gourmet/receitas-doces.html">Receitas Doces</a></li>
             <li><a href="./menu-gourmet/receitas-salgadas.html">Receitas Salgadas</a></li>
