--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
     </section>
 
     <section class="Container">
+        <div class="Texto2">
+            <h2> INSPIRI-SE! </h2>
+            <h4> Dê uma olhada nessas receitas... </h4>
+        </div>
+    </section>
+
+    <section class="Container">
         <div class="carousel-container">
             <div class="carousel">
                 <div class="Card">
@@ -85,6 +92,36 @@
                             <img src="img/relogio1.png" alt="clock">
                             <p>00:25 + tempo para demolhar as
                                 castanhas e gelar o maracujá</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="Card">
+                    <img src="./img/imagem1.png" alt="Receita 1">
+                    <div class="card-content">
+                        <h3> SOBREMESA </h3>
+                        <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano, Vegetariano</p>
+                        <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
+                        <p>Uma mousse de maracujá deliciosa, saudável e prática, sem leite condensado, creme de leite e
+                            ovos. </p>
+                        <div class="relogio">
+                        <img src="img/relogio1.png" alt="clock">
+                        <p>00:25 + tempo para demolhar as
+                            castanhas e gelar o maracujá</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="Card">
+                    <img src="./img/imagem1.png" alt="Receita 1">
+                    <div class="card-content">
+                        <h3> SOBREMESA </h3>
+                        <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano, Vegetariano</p>
+                        <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
+                        <p>Uma mousse de maracujá deliciosa, saudável e prática, sem leite condensado, creme de leite e
+                            ovos. </p>
+                        <div class="relogio">
+                        <img src="img/relogio1.png" alt="clock">
+                        <p>00:25 + tempo para demolhar as
+                            castanhas e gelar o maracujá</p>
                         </div>
                     </div>
                 </div>
