--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </main>
 
-    <!-- Em Construção -->
+
     <section class="Container">
         <div class="Texto1">
             <h4> SOBRE A GENTE </h4>
@@ -58,15 +58,15 @@
 
     <section class="Container">
         <div class="Card2">
-            <img src="./img/receita1.png" alt="Em construção">
+            <img src="./img/imagem2.png" alt="Em construção">
             <h3> Em Construção </h3>
             <p>O site oferece uma ampla variedade de receitas gourmet,
                 desde pratos clássicos refinados até criações
                 inovadoras. Os visitantes são convidados a explorar
                 e descobrir novos sabores e técnicas culinárias,
                 transformando suas refeições em experiências
-                memoráveis, como esta incrível Salada de Arroz
-                com Camarão.</p>
+                memoráveis, como este incrível Arroz de Bacalhau "A
+                Fugir" com Rúcula.</p>
         </div>
     </section>
 
@@ -81,13 +81,34 @@
         <div class="carousel-container">
             <div class="carousel">
                 <div class="Card">
+                    <img src="./img/imagem2.png" alt="Receita 1">
+                    <div class="card-content">
+                        <h3> PRINCIPAL </h3>
+                        <p>Clássico (sem restrições), Sem
+                            Glúten, Sem Glúten e Sem Lactose,
+                            Sem Lactose</p>
+                        <h2>
+                            ARROZ DE BACALHAU "A
+                            FUGIR" COM RÚCULA
+                        </h2>
+                        <p>Um arroz bem português,
+                            combinado com uma saladinha
+                            refrescante. </p>
+                        <div class="relogio">
+                            <img src="img/relogio1.png" alt="clock">
+                            <p>00:45 </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="Card">
                     <img src="./img/imagem1.png" alt="Receita 1">
                     <div class="card-content">
                         <h3> SOBREMESA </h3>
                         <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano, Vegetariano</p>
                         <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
-                        <p>Uma mousse de maracujá deliciosa, saudável e prática, sem leite condensado, creme de leite e
-                            ovos.</p>
+                        <p>Uma mousse de maracujá deliciosa, saudável e prática, sem leite condensado, creme de
+                            leite e
+                            ovos. </p>
                         <div class="relogio">
                             <img src="img/relogio1.png" alt="clock">
                             <p>00:25 + tempo para demolhar as
@@ -96,47 +117,145 @@
                     </div>
                 </div>
                 <div class="Card">
-                    <img src="./img/imagem1.png" alt="Receita 1">
+                    <img src="./img/imagem3.png" alt="Receita 1">
                     <div class="card-content">
-                        <h3> SOBREMESA </h3>
-                        <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano, Vegetariano</p>
-                        <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
-                        <p>Uma mousse de maracujá deliciosa, saudável e prática, sem leite condensado, creme de leite e
-                            ovos. </p>
+                        <h3> PRINCIPAL </h3>
+                        <p>Clássico (sem restrições), Sem Glúten, Sem
+                            Glúten e Sem Lactose, Sem Lactose, Vegano,
+                            Vegetariano</p>
+                        <h2>
+                            CUSCUZ PAULISTA DE LEGUMES
+                            COM ALGA NORI</h2>
+                        <p>Um prato muito típico da cozinha regional
+                            brasileira, só que com um sabor diferente. </p>
                         <div class="relogio">
-                        <img src="img/relogio1.png" alt="clock">
-                        <p>00:25 + tempo para demolhar as
-                            castanhas e gelar o maracujá</p>
+                            <img src="img/relogio1.png" alt="clock">
+                            <p>01:00</p>
                         </div>
                     </div>
                 </div>
                 <div class="Card">
-                    <img src="./img/imagem1.png" alt="Receita 1">
+                    <img src="./img/imagem4.png" alt="Receita 1">
                     <div class="card-content">
                         <h3> SOBREMESA </h3>
                         <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano, Vegetariano</p>
                         <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
-                        <p>Uma mousse de maracujá deliciosa, saudável e prática, sem leite condensado, creme de leite e
+                        <p>Uma mousse de maracujá deliciosa, saudável e prática, sem leite condensado, creme de
+                            leite e
                             ovos. </p>
                         <div class="relogio">
-                        <img src="img/relogio1.png" alt="clock">
-                        <p>00:25 + tempo para demolhar as
-                            castanhas e gelar o maracujá</p>
+                            <img src="img/relogio1.png" alt="clock">
+                            <p>00:25 + tempo para demolhar as
+                                castanhas e gelar o maracujá</p>
                         </div>
                     </div>
                 </div>
                 <div class="Card">
-                    <img src="./img/imagem1.png" alt="Receita 1">
+                    <img src="./img/imagem5.png" alt="Receita 1">
                     <div class="card-content">
                         <h3> SOBREMESA </h3>
                         <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem Lactose, Vegano, Vegetariano</p>
                         <h2>MOUSSE DE MARACUJÁ SEM LEITE</h2>
-                        <p>Uma mousse de maracujá deliciosa, saudável e prática, sem leite condensado, creme de leite e
+                        <p>Uma mousse de maracujá deliciosa, saudável e prática, sem leite condensado, creme de
+                            leite e
                             ovos. </p>
                         <div class="relogio">
-                        <img src="img/relogio1.png" alt="clock">
-                        <p>00:25 + tempo para demolhar as
-                            castanhas e gelar o maracujá</p>
+                            <img src="img/relogio1.png" alt="clock">
+                            <p>00:25 + tempo para demolhar as
+                                castanhas e gelar o maracujá</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="Card">
+                    <img src="./img/imagem6.png" alt="Receita 1">
+                    <div class="card-content">
+                        <h3> SOBREMESA </h3>
+                        <p>Sem Glúten, Sem Glúten e Sem Lactose, Sem
+                            Lactose, Vegetariano
+                        </p>
+                        <h2>
+                            MASSA CHOUX SEM GLÚTEN E SEM
+                            LACTOSE
+                        </h2>
+                        <p>A tradicional receita francesa, da massa choux,
+                            adaptada sem leite e sem trigo, com
+                            excelentes resultados. </p>
+                        <div class="relogio">
+                            <img src="img/relogio1.png" alt="clock">
+                            <p>01:00 + tempo de esfriar</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="Card">
+                    <img src="./img/imagem7.png" alt="Receita 1">
+                    <div class="card-content">
+                        <h3> ACOMPANHAMENTO </h3>
+                        <p>Clássico (sem restrições), Low Carb, Sem
+                            Glúten, Vegetariano
+                        </p>
+                        <h2>
+                            MANTEIGA GHEE
+                        </h2>
+                        <p>Veja como fazer em casa a manteiga ghee -
+                            uma opção saudável e deliciosa para a
+                            preparação de receitas.
+                        </p>
+                        <div class="relogio">
+                            <img src="img/relogio1.png" alt="clock">
+                            <p>00:15 + tempo de esfriar</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="Card">
+                    <img src="./img/imagem8.png" alt="Receita 1">
+                    <div class="card-content">
+                        <h3> PRINCIPAL </h3>
+                        <p>Clássico (sem restrições), Sem Lactose</p>
+                        <h2>
+                            BIFE À MILANESA NA AIRFRYER
+                        </h2>
+                        <p>Um bife à milanesa, douradinho e crocante,
+                            sem óleo, na Airfryer.
+                        </p>
+                        <div class="relogio">
+                            <img src="img/relogio1.png" alt="clock">
+                            <p>00:45 + tempo para preparar mais
+                                porções</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="Card">
+                    <img src="./img/imagem9.png" alt="Receita 1">
+                    <div class="card-content">
+                        <h3> SOBREMESA </h3>
+                        <p>Clássico (sem restrições), Vegetariano</p>
+                        <h2>
+                            TRUFAS DE LIMÃO E CHOCOLATE</h2>
+                        <p>Um azedinho que contrasta com o chocolate,
+                            muito fáceis de preparar - é só fazer as
+                            bolinhas e depois passar direto no cacau em
+                            pó.
+                        </p>
+                        <div class="relogio">
+                            <img src="img/relogio1.png" alt="clock">
+                            <p>00:45 + tempo de esfriar</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="Card">
+                    <img src="./img/imagem10.png" alt="Receita 1">
+                    <div class="card-content">
+                        <h3> SOBREMESA </h3>
+                        <p>Clássico (sem restrições), Vegetariano</p>
+                        <h2>
+                            MAÇÃS ASSADAS COM CANELA E
+                            LIMÃO E CRUMBLE DE GENGIBRE</h2>
+                        <p>A suculência e a doçura das maçãs assadas,
+                            para servir com um delicioso crumble de
+                            gengibre, bem crocante e sequinho</p>
+                        <div class="relogio">
+                            <img src="img/relogio1.png" alt="clock">
+                            <p>1:15</p>
                         </div>
                     </div>
                 </div>
@@ -144,7 +263,21 @@
         </div>
     </section>
 
-
+    <section class="container FlexHome">
+        <div id="Texto1">
+            <h2>Mais Vantages</h2>
+        </div>
+    </section>
+    <section class="container FlexHome">
+        <div class="CardVantagem">
+                <img src="./img/card-home.png" alt="Receita 1">
+            <div class="card-content">
+                <p>Clássico (sem restrições), Sem
+                    Glúten, Sem Glúten e Sem Lactose,
+                    Sem Lactose</p>
+            </div>
+        </div>
+    </section>
 
     <!-- Rodapé -->
     <footer>
