--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
     </section>
     <section class="container FlexHome">
         <div class="CardVantagem">
+            <h2>Receitas</h2>
                 <img src="./img/card-home.png" alt="Receita 1">
             <div class="card-content">
                 <p>Clássico (sem restrições), Sem
